--- a/style.css
+++ b/style.css
@@ -32,18 +32,7 @@
     display: inline-block;
 }
 
-.base> div{
-    border: solid ;
-    width: 250px;
-    padding: 50px;
-    height: 340px;
-    /*margin: 10px;*/
-    /*margin-bottom: 0px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 0%;*/
-    display: inline-block;
-}
+
 
 .caja1{
 margin-left: 150px;
@@ -57,4 +46,42 @@ margin-left: 150px;
 
 .caja3{
 margin-right: 150px;
+}
+
+/*herencia*/
+.base> div{
+    border: solid ;
+    width: 250px;
+    padding: 50px;
+    height: 340px;
+    /*margin: 10px;*/
+    /*margin-bottom: 0px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 0%;*/
+    display: inline-block;
+}
+
+.caja1>div{
+    width: 230px;
+    height: 160px;
+    margin: 1px;
+    border: double red 1px;
+
+}
+
+.caja2>div{
+    width: 230px;
+    height: 160px;
+    margin: 1px;
+    border: double red 1px;
+
+}
+
+.caja3>div{
+    width: 230px;
+    height: 160px;
+    margin: 1px;
+    border: double red 1px;
+
 }
